Configuring Axios client

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.26.1",
     "mirage.js": "^1.0.0",
     "miragejs": "^0.1.43",
     "react": "^17.0.2",
