--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.26.1",
     "mirage.js": "^1.0.0",
     "miragejs": "^0.1.43",
+    "polished": "^4.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
